--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
 @import 'base/variables';
+@import 'base/mixins';
 
 * {
     font-family: 'Poppins', sans-serif;
@@ -9,4 +10,13 @@
     padding: 0;
 }
 
+.container {
+    width: 1140px;
+    margin: 0 auto;
+}
 
+
+@import 'blocks/promo';
+@import 'blocks/title';
+@import 'blocks/buttons';
+@import 'blocks/sidepanel'
