creating animation on the first screen of the site

--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,17 +1,17 @@
 .promo {
     min-height: 100vh;
     position: relative;
-    background: url('../img/main_bg.jpg') no-repeat 50%/cover;
-    padding-top: 205px;
 
     &__title {
-        width: 535px;
+        width: 635px;
         margin-top: 10px;
+        color: white;
     }
 
     &__subtitle {
         position: relative;
         padding-left: 10px;
+        color: white;
         z-index: 2;
         @include before_circle;
     }
@@ -25,11 +25,11 @@
     }
 
     &__link {
-        color: black;
+        color: white;
         font-weight: bold;
 
         &:hover {
-            color: black;
+            color: white;
             text-decoration: none;
         }
 
