--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -9,18 +9,59 @@
         grid-auto-rows: minmax(270px, auto);
         gap: 13px;
     }
+
     &__item {
         border: 1px solid black;
         padding: 30px 30px 25px 30px;
+        height: 100%;
+        overflow: hidden;
+
+        &__wrapper {
+            display: flex;
+            height: 100%;
+            width: calc(200% + 40px);
+        }
+        &__content {
+            height: 100%;
+            width: 50%;
+            transition: 1.2s all;
+            transform: translateX(-100%);
+            &_active {
+                transform: translateX(0%);
+            }
+        }
+        &__descr {
+            width: 50%;
+            height: 100%;
+            margin-left: 20px;
+            padding-right: 20px;
+            transition: 1.2s all;
+            transform: translateX(0%);
+            &_active {
+                transform: translateX(-100%);
+                margin-left: 0px;
+            }
+            p {
+                width: 197px;
+            }
+
+        }
+
         &-img {
             display: flex;
-            align-items: center;
-            min-height: 65px;
+            justify-content: center;
+            padding-top: 35px;
+
+            .item-img {
+                min-height: 130px;
+            }
         }
+
         h3 {
             margin-top: 20px;
             margin-bottom: 0;
         }
+
         p {
             margin-top: 15px;
             margin-bottom: 0;
@@ -28,34 +69,40 @@
             line-height: 18px;
         }
     }
+
     &__ratings {
         margin-top: 120px;
         display: grid;
         grid-template: repeat(2, minmax(70px, auto)) / repeat(3, 350px);
         column-gap: 45px;
         row-gap: 35px;
+
         &-item {
             display: grid;
             grid-template: minmax(21px, auto) 14px / 200px 35px;
             justify-content: space-between;
             align-content: space-between;
         }
+
         &-title {
             position: relative;
             padding: 2px 0 0 13px;
 
             @include before_circle;
         }
+
         &-counter {
             font-size: 14px;
             line-height: 21px;
         }
+
         &-line {
             width: 350px;
             height: 14px;
             background-color: #E8E4DE;
             border-radius: 4px;
             grid-column: 1 / 3;
+
             span {
                 display: block;
                 height: 100%;
