--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -87,6 +87,7 @@
         border: none;
         font-weight: bold;
         font-size: 14px;
+        color:white;
         line-height: 21px;
     }
 }
