--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -20,6 +20,9 @@
     &_fz48 {
         font-size: 48px;
     }
+    &_fz50 {
+        font-size: 50px;
+    }
     &__section-title {
         position: relative;
         text-align: center;
