--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -11,13 +11,13 @@
 
     span {
         display: block;
-        width: 30px;
+        width: 35px;
         height: 3px;
-        background: #151812;
+        background: #ffffff;
     }
 
     span.long {
-        width: 36px;
+        width: 41px;
     }
 }
 
@@ -110,6 +110,6 @@
         width: 100%;
         height: 100%;
         background-color: #fff;
-        opacity: .75;
+        opacity: .2;
     }
 }
