--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -7,22 +7,28 @@
         grid-template: repeat(2, 280px) / repeat(4, 280px);
         grid-auto-rows: 280px;
         gap: 5px;
+
         .vertical {
             grid-row: 1 / 3;
             grid-column: 4 / 5;
         }
+
         .horizonal {
             grid-column: 2 / 4;
             grid-row: 2 / 3;
         }
     }
+
     &__item {
         transition: all 0.6s;
-        img {
+
+        &-img {
             width: 100%;
-        }
-        &:hover {
-            transform: scale(1.07);
+            transition: all 0.6s;
+
+            &:hover {
+                transform: scale(1.07);
+            }
         }
     }
 }
