--- a/src/sass/blocks/_bg.scss
+++ b/src/sass/blocks/_bg.scss
@@ -18,3 +18,35 @@
     width: 535px;
     margin-top: 10px;
 }
+
+
+
+#about-canvas {
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    background: #ffffff;
+
+
+}
+#about-canvas #ab-canvas {
+    width: 100%;
+    height: 100%;
+}
+
+#contacts-canvas {
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    background: #ffffff;
+
+
+}
+#contacts-canvas #co-canvas {
+    width: 100%;
+    height: 100%;
+}
