--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -22,8 +22,15 @@
     &__item {
         transition: all 0.6s;
 
+        img {
+            width: 100%;
+            height: 100%;
+        } 
+        
         &-img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
             transition: all 0.6s;
 
             &:hover {
